# oshell

./: .gitignore  CMakeLists.txt  README.md  build.sh  makefile  meson.build  meson_options.txt  notes.txt  test.test  valgrind-out.txt  valgrind.txt
.cache/clangd/index/: Header.h.CDB7DA4FA142C823.idx  clear.c.D945860854D41D66.idx  execute_command.c.FC2B4E49AE33C0B6.idx  input_redirection.c.CF40C31CD806D381.idx  kill_process.c.18D9F4EB8D1EAEE2.idx  main.c.0AA6DEAEBB4E9735.idx  parsing.c.BF85AE82364EFD6F.idx  piping.c.2FF773D8AD68302C.idx  utils.c.FDE99BF2DE1A5F76.idx
go_shell_test/: ls.txt  string.txt
include/: Header.h  chaining.h  parse.h  parsing_utils.h  piping.h  utils.h
mini-shell-code/: source.md
mini-shell-code/msh/source/: msh.c
projectReport/oshellReport/: #oshell.bib#  :w  allOshellDrawings.drawio  main.aux  main.bbl-SAVE-ERROR  main.bcf  main.bcf-SAVE-ERROR  main.blg  main.fdb_latexmk  main.fls  main.out  main.run.xml  main.tex  main.toc  oshell.bib
projectReport/oshellReport/_minted/: 12492D98557468B6A2DA8FD4940CC775.highlight.minted  1D8C3624B9667D0A75FB04430FDE9A2F.highlight.minted  31655778BBA0646A828AC70E26A1BAC3.highlight.minted  316B738FBE87F94E23CA4F9680E3F7F4.highlight.minted  3241C4F6BE1E74FD539F8C7897E06F71.highlight.minted  34F80B723F29243EC3BA1D2F371BB2D0.highlight.minted  4D5B55D94763EB4E6B6E4C8B4D2B5ADA.highlight.minted  4E8CE2EA843E4A8C48943314296FA6C4.highlight.minted  5AED977C5786C5EFBE000131810D09C3.highlight.minted  5D0AE27A4517891CF09C0DBABA1CD4A6.highlight.minted  60446091866045056B59F6368ED4EBDE.highlight.minted  6AB42909BAEA78252846558727CAF206.highlight.minted  6BE907C4932BBE56A56FDD44A1D0E8AD.highlight.minted  7B23A20ACF1A2E3DBA5AB0A9BC90A980.highlight.minted  80A2E96E8C5C09D7E74FBCF2174569EA.highlight.minted  82A4FCFC896EC94F42EC558255C96BFB.highlight.minted  8493A623BCDFC3640484C5C9FC0F0D86.highlight.minted  84C856AC19EBCA17DAB0A4D4F9BA22D9.highlight.minted  8C5831C5A2A2E4A186E61D9BABF8349B.highlight.minted  90FD2F149D9B73356A994B749F2DF495.highlight.minted  A1719258D5BF308CCB4D839F9BAC7CA7.highlight.minted  A345ADDD9ECCCA2569AA7FFB87B04C92.highlight.minted  B39C2AC5B565B0D918119B2A5C9BEE92.highlight.minted  BF123001DC041A290FD48664496F9AAD.highlight.minted  BFB55D744B03241B0C6E05A49D0906C4.highlight.minted  C4EBCB202ADA32ADF75E7EFEBD8ABCDD.highlight.minted  CBAEB19C72253F6ABB54B3981635BC5F.highlight.minted  CC6D27EF23FDA9A7C65A9C3AD15FB20E.highlight.minted  CD92A2A606D9314596398D74AA1BDD84.highlight.minted  CEA4EACFA4B682AB79A8E25FEF99042C.highlight.minted  CFC51553CD9A31712F00ECDBD77AD099.highlight.minted  D72595A2E87E847A51F6F3A0D7155800.highlight.minted  D76A4A5CEE77CA751048DDDCB36F6F1D.highlight.minted  D778623ED379A92DB2CD853E1CDF3606.highlight.minted  E400F2851BF7C01B14B34CBD4622D935.highlight.minted  F405AAF4AD7F73DDDD4C18444A77517F.highlight.minted  _FAD58DE7366495DB4650CFEFAC2FCD61.index.minted
projectReport/oshellReport/auto/: main.el  oshell.el
projectReport/oshellReport/svg-inkscape/: executeCommand.drawio_svg-tex.pdf_tex  inputRedirection.drawio_svg-tex.pdf_tex  inputRedirection_svg-tex.pdf_tex  mainLoopFlowchart.drawio_svg-tex.pdf_tex  mainLoopFlowchart_svg-tex.pdf_tex  multiPipe.drawio_svg-tex.pdf_tex  outputRedirection.drawio_svg-tex.pdf_tex  (+4 more)
scripts/: run-clang-format.py
shell_test/: Cargo.toml
shell_test/src/: lib.rs
src/: background_execution.c  chaining.c  clear.c  envvars.c  execute_command.c  help.c  input_redirection.c  input_redirection.txt  kill_process.c  main.c  parsing.c  parsing_utils.c  piping.c  piping.txt  utils.c
src/parsing/: clear.c  execute_command.c  input_redirection.c  output_redirection.c  parsing.c  piping.c  validate_command.c
tests/: go.mod  shell_test.go
(+1 files in other folders)
